test/error/literal_as_ref.colgm
func foo(a: i32&) {
    a += 1;
}

func main() -> i32 {
    foo(0); // error: cannot use literal as reference
    return 0;
}