test/error/literal_as_ref.result
Error: cannot pass literal as reference
  --> test/error/literal_as_ref.colgm:6:9
  | 
6 |     foo(0); // error: cannot use literal as reference
  |         ^